# data-science-dashboard-app

./: README.md  pyproject.toml
src/data_science_dashboard_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dsdashboard/: cli.py  data_loader.py  scaffolder.py  trainer.py
