[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-dashboard-app"
version = "1.0.1"
description = "Reusable Data Science Dashboard CLI Generator"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "viswanadh.mnv@gmail.com"}
]

dependencies = []

[project.scripts]
dsdashboard = "dsdashboard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]